Navigation, Icons, Native Base and Completed Contact Screen

--- a/package.json
+++ b/package.json
@@ -7,8 +7,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "assets": "file:src/assets",
+    "common": "file:src/common",
+    "native-base": "^2.12.1",
+    "navigation": "file:src/navigation",
     "react": "16.8.3",
-    "react-native": "0.59.3"
+    "react-native": "0.59.3",
+    "react-navigation": "^2.3.0",
+    "screens": "file:src/screens"
   },
   "devDependencies": {
     "@babel/core": "7.4.0",
